Some changes to make code compatible with Tianshou official version and some minor corrections of the notebooks.

--- a/notebooks/nb_120_IntroOfflineRL.ipynb
+++ b/notebooks/nb_120_IntroOfflineRL.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "As an example of a behavior policy ($\\pi_b$), when training a robot to navigate a room, $\\pi_b$ might involve rules like \"avoid obstacles,\" \"move forward,\" or \"stop.\" It could be operated manually by a human who controls the robot based on sensor data, such as lidar for collision detection, or it could be a combination of suboptimal policies.\n",
     "\n",
-    "**The goal of offline RL is to derive an optimal or near-optimal policy directly from $D,\" without requiring further interactions with the environment**."
+    "**The goal of offline RL is to derive an optimal or near-optimal policy directly from $D$ without requiring further interactions with the environment**."
    ]
   },
   {
@@ -65,11 +65,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some examples where offline RL could be highly benefitial:\n",
+    "Some examples where offline RL could be highly beneficial:\n",
     "    \n",
-    "**Decision Making in Health Care**: In healthcare, we can use Markov decision processes to model the diagnosis and treatment of patients. Actions are interventions like tests and treatments, while observations are patient symptoms and test results. Offline RL is safer and more practical than active RL, as treating patients directly with partially trained policies is risky.\n",
+    "**Decision's Making in Health Care**: In healthcare, we can use Markov decision processes to model the diagnosis and treatment of patients. Actions are interventions like tests and treatments, while observations are patient symptoms and test results. Offline RL is safer and more practical than active RL, as treating patients directly with partially trained policies is risky.\n",
     "\n",
-    "**Learning Robotic Manipulation Skills**: In robotics, we can use active RL for skill learning, but generalizing skills across different environments is challenging. Offline RL allows us to reuse previously collected data from various skills to accelerate learning of new skills. For example, making soup with onions and carrots can build on past experiences with onions and meat or carrots and cucumbers, reducing the need for new data collection.\n",
+    "**Learning Robotic Manipulation Skills**: In robotics, we can use active RL for skill learning, but generalizing skills across different environments is challenging. Offline RL allows us to reuse previously collected data from various skills to accelerate learning of new skills. For example, making soup with onions and carrots can build on experiences with onions and meat or carrots and cucumbers, reducing the need for new data collection.\n",
     "\n",
     "**Learning Goal-Directed Dialogue Policies**: Dialogue systems, like chatbots helping users make purchases, can be modeled as MDPs. Collecting data by interacting with real users can be costly. Offline data collection from humans is a more practical approach for training effective conversational agents.\n",
     "\n",
@@ -86,7 +86,7 @@
    "source": [
     "In summary, the process is clear:\n",
     "\n",
-    "**Phase A**: Collect data set, $D$, of state-action paird through a behavior policy $\\pi_b$: e.g. a robot randomly moving (or human controlled) in a given space, data collected from an autonomous vehicle, etc. The data collected doesn't need to come from an expert (typically the case in real situations) and during this phase we are not worry in general about a specific task (i.e. rewards). In fact it could be that the data is collected from a robot doing a different task that the one we are interested in. We want just a set of allowed state-action pairs that could be usable and representative for the task in mind.\n",
+    "**Phase A**: Collect data set, $D$, of state-action pairs through a behavior policy $\\pi_b$: e.g. a robot randomly moving (or human controlled) in a given space, data collected from an autonomous vehicle, etc. The data collected doesn't need to come from an expert (typically the case in real situations) and during this phase we are not worry in general about a specific task (i.e. rewards). In fact, it could be that the data is collected from a robot doing a different task that the one we are interested in. We want just a set of allowed state-action pairs that could be usable and representative for the task in mind.\n",
     "\n",
     "**Phase B**: In this phase we want to solve a given task (so we need to design rewards) only through the provided initial data without any interaction with the environment but still be able to find an optimal or near-optimal policy."
    ]
@@ -133,10 +133,10 @@
    "source": [
     "### References\n",
     "\n",
-    "[ Levine et. al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
-    "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf)\n",
+    "[ Levine et al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
+    "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf).\n",
     "\n",
-    "[Prudencio et. al. ' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
+    "[Prudencio et al. ' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)."
    ]
   },
   {
