--- a/notebooks/nb_130_RLOpenSourceDatasets.ipynb
+++ b/notebooks/nb_130_RLOpenSourceDatasets.ipynb
@@ -29,28 +29,26 @@
    "metadata": {},
    "source": [
     "### MINARI Dataset \n",
-    "(previouly called D4RL from UC Berkeley/Google Brain)"
+    "(previously called D4RL from UC Berkeley/Google Brain)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This library is emerging as the standard in the field. While previously reliant on D4RL, the community is currently transitioning to Minari. Its scope is to fill the gap of representative datasets in in offline RL, by introducing open-source datasets explicitly crafted for the offline setting. These datasets are shaped by the critical properties that real-world applications of offline RL demand. Minari provides datasets collected with random, medium, and expert policies in some environments, allowing us to evaluate whether an algorithm can extract meaning from noise. \n",
+    "This library is emerging as the standard in the field. While previously reliant on D4RL, the community is currently transitioning to Minari. Its scope is to address the gap of representative datasets in offline RL, by introducing open-source datasets explicitly crafted for the offline setting. These datasets are shaped by the critical properties that real-world applications of offline RL demand. Minari provides datasets collected with random, medium, and expert policies in some environments, allowing us to evaluate whether an algorithm can extract meaning from noise.\n",
     "\n",
     "In particular the provided datasets focus mainly on the following properties that appear often in realistic situations:\n",
     "\n",
     "\n",
     "1 - **Narrow and biased data distributions**: e.g. from deterministic policies: Narrow datasets may arise in human demonstrations or in hand-crafted policies.\n",
     "\n",
-    "2 - **Undirected and multitask data**: Undirected in the sense that is not directed towards the specific task one is trying to accomplish. E.g.: recording user interactions on the internet or recording videos of a car for autonomous driving. The main purpose it to test how good is the offline agebt to be used for \"trajectory stitching\", i.e. combining trajectories from different tasks to achieve new objectives, instead of searching for out-of-distribution trajectories.\n",
+    "2 - **Undirected and multitask data**: Undirected in the sense that is not directed towards the specific task one is trying to accomplish. E.g.: recording user interactions on the internet or recording videos of a car for autonomous driving. The main purpose it to test how good is the offline agent to be used for \"trajectory stitching\", i.e. combining trajectories from different tasks to achieve new objectives, instead of searching for out-of-distribution trajectories.\n",
     "\n",
     "<img src=\"Images/stiching.png\" alt=\"stich_traj\" style=\"width:200px;\">\n",
     "\n",
     "3 - **Sparse rewards**: Sparse rewards are challenging in online settings due to their close correlation with exploration. In offline RL, we exclusively explore within the dataset, making it an ideal framework to study the algorithm's response to sparse rewards.\n",
     "Note that crafting effective rewards can be challenging, and overly complex rewards may inadvertently push solutions towards suboptimal outcomes. In contrast, designing sparse rewards is often more straightforward as it merely involves specifying the task's success criteria, making it an attractive property to work with.\n",
-    "\n",
-    "ToDo: Add a sparse reward exercise\n",
     "\n",
     "4 - **Suboptimal data**: Give a clear task the data could not contain any optimal trajectory so this is a realistic scenario in general and still the offline agent should be able to find a suboptimal solution.\n",
     "\n",
@@ -119,8 +117,17 @@
     "[ C. Gulcehre et al. '2021, “RL unplugged: A suite of benchmarks for offline\n",
     "reinforcement learning](https://arxiv.org/abs/2006.13888)\n",
     "\n",
-    "[ \\[A. Padalkar et. al. '2023 \\] Open X-Embodiment: Robotic Learning Datasets and RT-X Models\\ ](https://robotics-transformer-x.github.io/)\n"
+    "[ A. Padalkar et. al. '2023 Open X-Embodiment: Robotic Learning Datasets and RT-X Models\\ ](https://robotics-transformer-x.github.io/)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
