--- a/notebooks/nb_131_Minari_Overview.ipynb
+++ b/notebooks/nb_131_Minari_Overview.ipynb
@@ -22,10 +22,10 @@
     "\n",
     "Has different functionalities like to add useful metadata to the datasets, fuse data coming from different behavioral policies, custom preprocessing of the collected (observation, action, reward) data, add new data to existing datasets, restore the environments associated with your data, etc. We will use some of these functionalities in our exercises.\n",
     "\n",
-    "However, is not a very robust library so in the possible it is better to have your own functions to restore your environment, load metadata, etc. And rely on Minari a less as possible. We will see that in the notebook exercises.\n",
+    "However, is not a very robust library so in the possible it is better to have your own functions to restore your environment, load metadata, etc. And rely on Minari as little as possible. We will see that in the notebook exercises.\n",
     "\n",
     "\n",
-    "Of course one of the main use of it is to Download the very useful datasets available online as well as to have access to the policies used to generate them: [datasets](https://minari.farama.org/main/datasets/pen/human/)\n",
+    "Of course one of its main use is to Download the very useful datasets available online as well as to have access to the policies used to generate them: [datasets](https://minari.farama.org/main/datasets/pen/human/)\n",
     "\n",
     "\n",
     "\n",
@@ -34,7 +34,7 @@
     "\n",
     "2 - **Mujoco:**\n",
     "\n",
-    "MuJoCo, short for Multi-Joint dynamics with Contact, is a versatile physics engine designed to support research and development across various fields, including robotics, biomechanics, graphics, animation, machine learning, and more. Originally created by Roboti LLC, it was later acquired by DeepMind and made freely accessible to the public in October 2021. Furthermore, it was open-sourced in May 2022. [Github](https://github.com/google-deepmind/mujoco)"
+    "MuJoCo, short for Multi-Joint dynamics with Contact, is a versatile physics engine designed to support research and development across various fields, including robotics, bio-mechanics, graphics, animation, machine learning, and more. Originally created by Robotic LLC, it was later acquired by DeepMind and made freely accessible to the public in October 2021. Furthermore, it was open-sourced in May 2022. [GitHub](https://github.com/google-deepmind/mujoco)"
    ]
   },
   {
@@ -44,8 +44,7 @@
    "source": [
     "## RL unplugged (Deepmind)\n",
     "\n",
-    "[website](https://www.deepmind.com/blog/rl-unplugged-benchmarks-for-offline-reinforcement-learning) and\n",
-    "[blog](https://www.deepmind.com/blog/rl-unplugged-benchmarks-for-offline-reinforcement-learning)"
+    "[website](https://www.deepmind.com/blog/rl-unplugged-benchmarks-for-offline-reinforcement-learning) and [blog](https://www.deepmind.com/blog/rl-unplugged-benchmarks-for-offline-reinforcement-learning)"
    ]
   },
   {
