--- a/notebooks/nb_140_CollectDataWithMinari.ipynb
+++ b/notebooks/nb_140_CollectDataWithMinari.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this notebook, we will create our own suboptimal policy and generate a Minari dataset using the collected data. The primary goal is to become familiar with the Minari library and learn how to collect data in the form of (step, action, reward).**"
+    "**In this notebook, we will create our own suboptimal policy and generate a Minari dataset using the collected data. The primary goal is to become familiar with the Minari library and learn how to collect data in the form of (step, action, reward) using it.**"
    ]
   },
   {
@@ -53,9 +53,9 @@
     "\n",
     "**Notation:**\n",
     "\n",
-    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2$ corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
+    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2 corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
     "\n",
-    "Observations are represented as a 64-dimensional vector since we are working with an 8x8 grid. All vector elements are set to zero, except for the position where the agent is located, which is set to one.\n",
+    "Observations are represented as a 64-dimensional vector since we are working with a 8x8 grid. All vector elements are set to zero, except for the position where the agent is located, which is set to one.\n",
     "\n",
     "The action is represented by an integer in the range of [0, 1, 2, 3], each indicating a direction:\n",
     "\n",
@@ -77,7 +77,8 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "RENDER_MODE = RenderMode.RGB_ARRAY_LIST\n",
     "\n",
-    "# Configure the environment initial conditions. We also have different obstacles regidterd\n",
+    "\n",
+    "# Configure the environment initial conditions. We also have different obstacles registered\n",
     "# in ObstacleTypes. \n",
     "env_2d_grid_initial_config = Grid2DInitialConfig(\n",
     "    obstacles=ObstacleTypes.vertical_object_8x8,\n",
@@ -170,7 +171,7 @@
     "    render_mode=RENDER_MODE,\n",
     "    policy_model= behavior_suboptimal_policy,\n",
     "    env_2d_grid_initial_config=env_2d_grid_initial_config,\n",
-    "    num_frames=200,\n",
+    "    num_frames=1000,\n",
     ")"
    ]
   },
@@ -223,7 +224,7 @@
     "\n",
     "delete_minari_data_if_exists(minari_dataset_name)\n",
     "\n",
-    "# Usefull for data preprocessing\n",
+    "# Useful for data preprocessing\n",
     "class CustomSubsetStepDataCallback(StepDataCallback):\n",
     "    def __call__(self, env, **kwargs):\n",
     "        step_data = super().__call__(env, **kwargs)\n",
@@ -262,7 +263,7 @@
    "source": [
     "Let's visualize the state-action distribution data.\n",
     "\n",
-    "First, let's upload the Minari dataset in a Tainshou ReplyBuffer object."
+    "First, let's upload the Minari dataset in a Tianshou ReplyBuffer object."
    ]
   },
   {
@@ -296,15 +297,15 @@
     "\n",
     "[ \\[Fu.Justin et. al.\\] D4RL: Datasets for Deep Data-Driven Reinforcement Learning](https://arxiv.org/abs/2004.07219)\n",
     "\n",
-    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/)"
+    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/) "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rl-train-ivan",
+   "display_name": "tianshou_dev",
    "language": "python",
-   "name": "rl-train-ivan"
+   "name": "tianshou_dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -316,22 +317,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": false
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
