--- a/notebooks/nb_150_Imitation_learning_theory.ipynb
+++ b/notebooks/nb_150_Imitation_learning_theory.ipynb
@@ -12,16 +12,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Imitation learning is a supervice learning approach focuses on learning policies or behaviors by observing and imitating expert demonstrations**. Instead of learning from trial and error, imitation learning leverages existing expert knowledge to train agents. \n",
+    "**Imitation learning is a supervise learning approach focuses on learning policies or behaviors by observing and imitating expert demonstrations**. Instead of learning from trial and error, imitation learning leverages existing expert knowledge to train agents.\n",
     "\n",
-    "This makes this algorithms appealing as **you don't need to create a reward function for your task** like in situatons where the manual approach becomes essential because creating a reward function directly is not feasible, such as when training a self-driving vehicle."
+    "This makes these algorithms appealing as **you don't need to create a reward function for your task** like in situations where the manual approach becomes essential because creating a reward function directly is not feasible, such as when training a self-driving vehicle."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The easiet imitation learning algorithm is call BC (Behavioral Cloning) and is just supervised learning on the collected expert data, i.e.:\n",
+    "The easiest imitation learning algorithm is call BC (Behavioral Cloning) and is just supervised learning on the collected expert data, i.e.:\n",
     "\n",
     "$$ D = \\{(s_0, a_0), (s_1, a_1), \\ldots, (s_T, a_T^o)\\} \\quad \\tag{Dataset} $$\n",
     "\n",
@@ -33,13 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are improve versions of BC like DAgger (Dataset Aggregation) where after BC the policy is rollout and if new states appear a new feedback is ask to the human expert. This could produce a huge improvement but it could be quite expensive.\n",
+    "There are improve versions of BC like DAgger (Dataset Aggregation) where after BC the policy is being rollout and if new states appear a new feedback is to ask the human expert. This could produce a huge improvement, although it could be quite expensive.\n",
     "\n",
     "Pros and cons of these models:\n",
     "\n",
-    "**pros**: If you have expert dataset and you are not worry about safety (i.e. unexpected policy behavior in unknown states) this could be a a fast approach. \n",
+    "**pros**: If you have expert dataset, and you are not worry about safety (i.e. unexpected policy behavior in unknown states) this could be a fast approach.\n",
     "\n",
-    "**cons**: In general we don't have access to expert data so this is one of the main issues, but even if we have we will have problems related with distributional shift between our clone policy and the provided dataset. We will see this in a moment in an exercise. Also many of the properties of the Minari datasets (see exercise notebook) that could appear in reality cannot be handled with simple imitation learning approaches, like for instance the stitching property. "
+    "**cons**: In general we don't have access to expert data so this is one of the main issues, but even if we have we will have problems related with distributional shift between our clone policy and the provided dataset. We will see this in a moment in an exercise. Also, many of the properties of the Minari datasets (see exercise notebook) that could appear in reality cannot be handled with simple imitation learning approaches, like for instance the stitching property."
    ]
   },
   {
@@ -61,11 +61,11 @@
    "source": [
     "### References\n",
     "\n",
-    "[ Ross et. al. 2012 - A Reduction of Imitation Learning and Structured Prediction to No-Regret Online Learning](https://arxiv.org/abs/1011.0686)\n",
+    "[ Ross et al. 2012 - A Reduction of Imitation Learning and Structured Prediction to No-Regret Online Learning](https://arxiv.org/abs/1011.0686)\n",
     "\n",
-    "[Janner et.al. 2021 - Offline Reinforcement Learning as One Big Sequence Modeling Problem](https://arxiv.org/abs/2106.02039)\n",
+    "[Janner et al. 2021 - Offline Reinforcement Learning as One Big Sequence Modeling Problem](https://arxiv.org/abs/2106.02039)\n",
     "\n",
-    "[Prudencio et. al.' 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
+    "[Prudencio et al. 2023 - A Survey on Offline Reinforcement Learning: Taxonomy, Review, and Open Problems ](https://arxiv.org/pdf/2203.01387.pdf)"
    ]
   },
   {
