--- a/notebooks/nb_151_imitation_learning-example.ipynb
+++ b/notebooks/nb_151_imitation_learning-example.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:19:31.038213Z",
+     "end_time": "2023-11-23T08:19:32.729502Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -36,7 +41,6 @@
     "\n",
     "load_env_variables()\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "# ToDo: this should be load automatically\n",
     "register_grid_envs()"
    ]
   },
@@ -66,7 +70,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:19:56.844041Z",
+     "end_time": "2023-11-23T08:19:56.851212Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -117,7 +126,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:20:06.535993Z",
+     "end_time": "2023-11-23T08:20:07.272402Z"
+    }
+   },
    "outputs": [],
    "source": [
     "DATA_SET_NAME = \"data\"\n",
@@ -153,7 +167,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:20:09.958443Z",
+     "end_time": "2023-11-23T08:20:10.972801Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Data saved in /offline_data\n",
@@ -200,7 +219,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:20:16.558905Z",
+     "end_time": "2023-11-23T08:20:23.233513Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -247,7 +270,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:20:27.821511Z",
+     "end_time": "2023-11-23T08:20:58.988447Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -356,10 +383,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T08:21:18.880512Z",
+     "end_time": "2023-11-23T08:21:54.692452Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Let's now remove the forbiden region and recreate the environment\n",
+    "# Let's now remove the forbidden region and recreate the environment\n",
     "new_env_config = copy(env_config)\n",
     "new_env_config.obstacles = ObstacleTypes.obst_free_8x8\n",
     "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=new_env_config)\n",
@@ -391,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start from a forbbiden position to see what happens."
+    "Let's start from a forbidden position to see what happens."
    ]
   },
   {
@@ -435,6 +467,15 @@
     "\n",
     "This is where offline RL algorithms come into play!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
