--- a/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
+++ b/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:03:00.562187Z",
+     "end_time": "2023-11-23T09:03:02.306139Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -40,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCISE:\n",
+    "### EXERCISE:\n",
     "\n",
     "In this exercise we have two datasets that tries to bring the agent from (3,0) to (7,7) . One policy is suboptimal and the other is optimal.\n",
     "\n",
@@ -73,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SOLUTION:"
+    "### SOLUTION:"
    ]
   },
   {
@@ -86,7 +91,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:03:14.908124Z",
+     "end_time": "2023-11-23T09:03:15.044391Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -116,7 +126,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:03:16.887433Z",
+     "end_time": "2023-11-23T09:03:16.891899Z"
+    }
+   },
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
@@ -139,13 +154,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:03:19.026048Z",
+     "end_time": "2023-11-23T09:03:19.591206Z"
+    }
+   },
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
-    "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        dataset_names = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
+    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
@@ -201,7 +221,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:04:04.783251Z",
+     "end_time": "2023-11-23T09:04:05.453808Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Create Buffers with minari datasets\n",
@@ -211,7 +236,7 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.05))\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.3))\n",
     "\n",
     "snapshot_env(env)"
    ]
@@ -226,7 +251,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:04:09.543247Z",
+     "end_time": "2023-11-23T09:04:09.546623Z"
+    }
+   },
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -251,7 +281,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:04:11.425532Z",
+     "end_time": "2023-11-23T09:04:15.954435Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run the training\n",
@@ -285,7 +320,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:04:53.274336Z",
+     "end_time": "2023-11-23T09:04:53.322673Z"
+    }
+   },
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy.pth\"\n",
@@ -335,7 +375,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T09:05:01.076252Z",
+     "end_time": "2023-11-23T09:07:00.140263Z"
+    }
+   },
    "outputs": [],
    "source": [
     "NUM_EPISODES = 100 # as more episodes the better\n",
@@ -361,18 +406,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2:"
+    "### Exercise 2:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too, expert data ~ 30000).\n",
+    "#### 1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too, \n",
+    "#### expert data ~ 30000).\n",
     "\n",
     "Is the policy better? Why?\n",
     "\n",
-    "Remove the walls and see what happens."
+    "Remove the walls and see what happens, i.e:"
    ]
   },
   {
@@ -398,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try again with the original data but now with one of the offline RL algorithms that we will introduce later:  BCQ.\n",
+    "#### 2 - Try now with the original problem and try one of the offline RL algorithms that we will introduce later:  BCQ.\n",
     "\n",
     "What happens now?\n",
     "\n",
@@ -415,9 +461,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "training_rl_ivan",
+   "name": "training_rl_ivan",
    "language": "python",
-   "name": "training_rl_ivan"
+   "display_name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -429,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
@@ -446,5 +492,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
