--- a/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
+++ b/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:10.722183Z",
+     "end_time": "2023-11-23T10:23:12.754719Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -30,7 +35,6 @@
     "from training_rl.offline_rl.offline_trainings.restore_policy_model import restore_trained_offline_policy\n",
     "import gymnasium as gym\n",
     "\n",
-    "\n",
     "load_env_variables()\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "# ToDo: this should be load automatically\n",
@@ -41,14 +45,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this notebook we will deal with another importat property that we should fulfill with a robust offline RL algorithm, the stitching, i.e. the reuse of different trajectories contain in the data to obtain the best trajecroy in our dataset.**\n",
+    "**In this notebook we will deal with another important property that we should fulfill with a robust offline RL algorithm, the stitching, i.e. the reuse of different trajectories contain in the data to obtain the best trajectory in our dataset.**\n",
     "\n",
     "\n",
     "The goal will be to reach a target at (7,7) starting from (0,0). We will use again the 8x8 grid environment. Our dataset contains trajectories covering our space of interest but generated for different tasks (note that before we collected data for the same task) . One is a suboptimal policy that moves the agent from (0,0) to (7,0) and the other is a deterministic an optimal one (human expert) that brings the agent from (4,0) to (7,7). We have obviously much more data coming from the suboptimal policy than the expert one as it is cheaper.\n",
@@ -57,7 +61,7 @@
     "\n",
     "I  - **Suboptimal expert policy** (behavior_8x8_moves_downwards_within_strip):  moves agent in suboptimal way downwards starting from (0,0) (collect 8000 steps)\n",
     "\n",
-    "II - **Optimal expert poilcy**(behavior_8x8_deterministic_4_0_to_7_7): moves agent in the optimal path from (4,0) to (7,7) (collect 300 steps) \n",
+    "II - **Optimal expert policy**(behavior_8x8_deterministic_4_0_to_7_7): moves agent in the optimal path from (4,0) to (7,7) (collect 300 steps)\n",
     "\n",
     "\n",
     "In this example we will use again as off-policy RL algorithm, the Deep Q-Network (DQN) algorithm."
@@ -74,13 +78,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Environment"
+    "### Environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:12.762329Z",
+     "end_time": "2023-11-23T10:23:12.905826Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -104,13 +113,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configure the two datasets"
+    "### Configure the two datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:17.284639Z",
+     "end_time": "2023-11-23T10:23:17.294529Z"
+    }
+   },
    "outputs": [],
    "source": [
     "DATA_SET_IDENTIFIER_I = \"_downwards_\"\n",
@@ -126,19 +140,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create combined Minari dataset"
+    "### Create combined Minari dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:18.786148Z",
+     "end_time": "2023-11-23T10:23:19.448448Z"
+    }
+   },
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
     "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"_stiching\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
@@ -149,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rendering behavioral policy"
+    "### Rendering behavioral policy"
    ]
   },
   {
@@ -189,13 +208,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## State-action distribution"
+    "### State-action distribution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:24.734120Z",
+     "end_time": "2023-11-23T10:23:25.687239Z"
+    }
+   },
    "outputs": [],
    "source": [
     "name_combined_dataset = config_combined_data.data_set_name\n",
@@ -214,16 +238,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Policy to train"
+    "### Policy to train"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:27.760489Z",
+     "end_time": "2023-11-23T10:23:27.765433Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "POLICY_NAME = PolicyName.dqn\n",
+    "POLICY_NAME = PolicyName.cql_discrete\n",
     "\n",
     "NAME_EXPERT_DATA = name_combined_dataset\n",
     "# TrainedPolicyConfig is a handy object that will help us to deal with the policy configuration data.\n",
@@ -239,18 +268,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "### Training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:23:30.622124Z",
+     "end_time": "2023-11-23T10:23:58.772614Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run the training\n",
     "\n",
-    "NUM_EPOCHS = 50\n",
+    "NUM_EPOCHS = 200\n",
     "BATCH_SIZE = 256\n",
     "UPDATE_PER_EPOCH = 100\n",
     "\n",
@@ -273,16 +307,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Restore policy"
+    "### Restore policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T10:24:35.049270Z",
+     "end_time": "2023-11-23T10:24:35.055669Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy.pth\"\n",
+    "POLICY_FILE = \"policy_best_reward.pth\"\n",
     "\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -297,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's visualize the policy"
+    "### Let's visualize the policy"
    ]
   },
   {
@@ -306,8 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_2D_grid_initial_config.obstacles = OBSTACLE.obst_free_8x8\n",
-    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=RenderMode.RGB_ARRAY_LIST), env_config=env_2D_grid_initial_config)\n",
+    "#env_2D_grid_initial_config.obstacles = OBSTACLE.obst_free_8x8\n",
+    "#env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=RenderMode.RGB_ARRAY_LIST), #env_config=env_2D_grid_initial_config)\n",
     "\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=env,\n",
@@ -323,26 +362,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questions:\n",
+    "Questions:\n",
     "\n",
-    "1 - What do you notice? What happens if you increase the collected data? Is it better? \n",
+    "1 - What do you notice? What happens if you increase the expert data? Is it better?\n",
     "\n",
-    "2 - Try again with the offline BCQ algorithm as we did in the previous example. What happens now?"
+    "2 - Try again with the BCQ algorithm.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "training_rl_ivan",
+   "name": "training_rl_ivan",
    "language": "python",
-   "name": "training_rl_ivan"
+   "display_name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -354,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
