--- a/notebooks/nb_170_Offline_RL_part_II.ipynb
+++ b/notebooks/nb_170_Offline_RL_part_II.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Approaches in Offline RL to Adress Distributional Shift"
+    "# Approaches in Offline RL to Address Distributional Shift"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**I-a) Non-implicit or Direct: We have access to the behavior policy**, $\\bf \\pi_\\beta$. For instance it could be a suboptimal classical policy (i.e. non RL) or computed from behavioral clonning on a given dataset. \n",
+    "**I-a) Non-implicit or Direct: We have access to the behavior policy**, $\\bf \\pi_\\beta$. For instance it could be a suboptimal classical policy (i.e. non RL) or computed from behavioral cloning on a given dataset.\n",
     "\n",
-    "As we already have $\\pi_\\beta$ we can constraint the learned and behavioral policy through:\n",
+    "As we already have $\\pi_\\beta$ we can constrain the learned and behavioral policy through:\n",
     "\n",
     "\\begin{align*}\n",
     "D_{KL}(\\pi(a|s)||\\pi_{\\beta}(a|s)) \\leq \\epsilon\n",
@@ -79,9 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**I-b) Implicit: We don't need $\\pi_\\beta$ and we can work directly with our data $D$**. This is the situation many times as the lack of data or in complex high dimensional spaces clonning a policy that match the real data distribution could be extremly hard. \n",
+    "**I-b) Implicit: We don't need $\\pi_\\beta$, and we can work directly with our data $D$**. This is the situation many times as the lack of data or in complex high dimensional spaces cloning a policy that match the real data distribution could be extremely hard.\n",
     "\n",
-    "In this approach you assume that you have a behavioral policy $\\mu$ (this will be integrated out later) and so you want to find a better one $\\pi$. What you could do is to maximize the diference reward:\n",
+    "In this approach you assume that you have a behavioral policy $\\mu$ (this will be integrated out later) and so you want to find a better one $\\pi$. What you could do is to maximize the difference reward:\n",
     "\n",
     "$\n",
     "\\begin{equation}\n",
@@ -101,7 +101,7 @@
     "\n",
     "what it makes sense intuitively as by maximizing (2) we are trying to find tha state-action pairs, i.e the $(s,a)$'s, generated from $\\pi$ that will produce the trajectories on the dataset with maximum cumulative reward (i.e. maximum $A^\\mu(s,a)$), in other words the best trajectories in our dataset! However, we need to restrict the (s,a) pairs to be close to the dataset and that's the reason of the $D_{KL}$ divergence.\n",
     "\n",
-    "At this point (2) can be formulate as a contrained optimization problem in a Lagrangian language:\n",
+    "At this point (2) can be formulated as a constrained optimization problem in a Lagrangian language:\n",
     "\n",
     "$\n",
     "\\begin{equation}\n",
@@ -128,11 +128,11 @@
     "$$\n",
     "\n",
     "\n",
-    "So again simple intuition: pairs (s,a) that could produce potentially high trajectory rewards on the dataset witll be prefered by $\\pi_\\theta(a | s)$.\n",
+    "So again simple intuition: pairs (s,a) that could produce potentially high trajectory rewards on the dataset will be preferred by $\\pi_\\theta(a | s)$.\n",
     "\n",
     "\n",
     "\n",
-    "are computing the expectation value of the policy $\\mu$ advantage, $A^\\mu(s,a)$, so basically the mean cumulative reward followed by $mu$ but starting from an state-action pair sampled from $\\pi$. \n",
+    "are computing the expectation value of the policy $\\mu$ advantage, $A^\\mu(s,a)$, so basically the mean cumulative reward followed by $mu$ but starting from a state-action pair sampled from $\\pi$.\n",
     "\n",
     "\n",
     "\n",
@@ -148,16 +148,16 @@
     "\\end{align*}\n",
     "$\n",
     "\n",
-    "This derivation comes from the AWR offpolicy algorithm but there are slighlty different implementations like the AWAC that uses an offpolicy Q-function $Q_π$ to estimate the advantage."
+    "This derivation comes from the AWR offpolicy algorithm but there are slightly different implementations like the AWAC that uses an offpolicy Q-function $Q_π$ to estimate the advantage."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Policy constraint methods are powerful but they can be often be too pessimistic, which is always undesirable. For instance, if we know that a certain state has all actions with zero reward, we should not care about constraining the policy in this state once it can inadvertently affect our neural network approximator while forcing the learned policy to be close to the behavior policy in this irrelevant state. We effectively limit how good of a policy we can learn from our dataset by being too pessimistic.\n",
+    "Policy constraint methods are powerful, but they can be often be too pessimistic, which is always undesirable. For instance, if we know that a certain state has all actions with zero reward, we should not care about constraining the policy in this state once it can inadvertently affect our neural network approximator while forcing the learned policy to be close to the behavior policy in this irrelevant state. We effectively limit how good of a policy we can learn from our dataset by being too pessimistic.\n",
     "\n",
-    "Also as we use function approximation on these methods this could produce some issues for instance when we fit a unimodal policy into multimodal data. In that case, policy constraint methods can fail dramatically."
+    "Also, as we use function approximation on these methods this could produce some issues for instance when we fit an unimodal policy into multimodal data. In that case, policy constraint methods can fail dramatically."
    ]
   },
   {
@@ -176,13 +176,13 @@
     "It's versatile, applicable to different RL methods, including actor-critic and Q-learning methods, and doesn't necessitate explicit behavior policy modeling (similar to the implicit constraint methods).\n",
     "\n",
     "\n",
-    "Perhaps one of the most famous examples is the CQL (Conservative Q-Learing) algorithm that introduces the following constraint as Q-value regularization:\n",
+    "Perhaps one of the most famous examples is the CQL (Conservative Q-Learning) algorithm that introduces the following constraint as Q-value regularization:\n",
     "\n",
     "\\begin{equation}\n",
     "CCQL_0(D, \\phi) = E_{s\\sim D, a\\sim \\mu(a|s)}[Q_{\\phi}(s, a)]\\ \\tag{1}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that if we choose  $Q_\\phi$ that minimizes (1) then we will be minimizing the Q-values in all states of the dataset. Suppose now that we choose the policy $\\mu$ in an adverisarial way such that it maximizes the constraint (1) then the net effect will be that the penalty will push down on high Q-values. This is what is rigourously shown in the CQL paper where they found that the solution of:\n",
+    "Note that if we choose  $Q_\\phi$ that minimizes (1) then we will be minimizing the Q-values in all states of the dataset. Suppose now that we choose the policy $\\mu$ in an adversarial way such that it maximizes the constraint (1) then the net effect will be that the penalty will push down on high Q-values. This is what is rigorously shown in the CQL paper where they found that the solution of:\n",
     "\n",
     "$\\hat{Q}^{k+1}_{\\text{CQL}} \\gets \\hbox{argmin}_Q \\left[ \\color{red} {\\alpha\\mathbb{E}_{s \\sim \\mathcal{D}, a \\sim \\mu}[Q(s,a)] } + \\frac{1}{2} \\mathbb{E}_{s,a \\sim \\mathcal{D}} \\Big[\\big(Q(s,a) - \\mathcal{B}^{\\pi}Q(s,a)\\big)^2\\Big] \\right]. \\tag{2}$\n",
     "\n",
@@ -198,16 +198,16 @@
    "source": [
     "### References\n",
     "\n",
-    "[Schulman et.al. '2017 - Trust Region Policy Optimization](https://arxiv.org/pdf/1502.05477.pdf)\n",
+    "[Schulman et al. 2017 - Trust Region Policy Optimization](https://arxiv.org/pdf/1502.05477.pdf)\n",
     "\n",
-    "[Kumar et.al. '2020 - Conservative Q-Learning for Offline Reinforcement Learning](https://arxiv.org/pdf/2006.04779.pdf)\n",
+    "[Kumar et al. 2020 - Conservative Q-Learning for Offline Reinforcement Learning](https://arxiv.org/pdf/2006.04779.pdf)\n",
     "\n",
-    "[ Levine et. al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
+    "[ Levine et al. 2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
     "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf)\n",
     "\n",
-    "[Peng et. al. '2019 - Simple and Scalable Off-Policy Reinforcement Learning](https://arxiv.org/abs/1910.00177)\n",
+    "[Peng et al. 2019 - Simple and Scalable Off-Policy Reinforcement Learning](https://arxiv.org/abs/1910.00177)\n",
     "\n",
-    "[Nair et.al. '2020 - AWAC: Accelerating Online Reinforcement Learning with Offline Datasets](https://arxiv.org/abs/2006.09359)\n"
+    "[Nair et al. '2020 - AWAC: Accelerating Online Reinforcement Learning with Offline Datasets](https://arxiv.org/abs/2006.09359)\n"
    ]
   },
   {
