--- a/notebooks/nb_180_offline_rl_algorithms_theory.ipynb
+++ b/notebooks/nb_180_offline_rl_algorithms_theory.ipynb
@@ -32,7 +32,7 @@
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "So the main idea is to modified the Evaluation/Improvement steps to improve the distributional shift problems."
+    "So the main idea is to modify the Evaluation/Improvement steps to improve the distributional shift problems."
    ]
   },
   {
@@ -63,7 +63,7 @@
     "\n",
     "The BCQ algorithm propose to tackle this problem by train a Variational Autoencoder (VAE) $G_\\omega(s')$ in the given dataset in order to generate in (1) reasonable actions $a'$ (i.e. with a high likelihood that will belong to the probability distribution describing our dataset), given the state $s'$ (thus BCQ belongs to the direct constraint policy algorithms). So the idea is to generate $n$ potential actions for $s'$ and select the one that maximizes the Q-value.\n",
     "\n",
-    "In order to be general enough BCQ propose to perturbate the generated actions by a perturbated actor that learns how to change the $n$ actions within a range $[-\\Phi, \\Phi]$ \n",
+    "In order to be general enough BCQ propose to perturb the generated actions by a perturbed actor that learns how to change the $n$ actions within a range $[-\\Phi, \\Phi]$\n",
     "through a function $\\xi_\\phi(s, a_i, \\Phi)$ trained in order to maximize the Q function (this also makes the algorithm more optimal as we don't need to generate too many VAE samples). In other words BCQ algorithm proposes for the improvement step (The details about the evaluation are not so relevant here, but you are welcome to explore the original paper for more details):\n",
     "\n",
     "$$ \n",
@@ -79,31 +79,19 @@
     "\\phi \\leftarrow \\underset{\\phi}{\\arg\\max} \\sum_{a \\sim G_{\\omega}(s)} Q_{\\theta_1}(s, a + \\xi_\\phi(s, a, \\Phi))\n",
     "$$\n",
     "\n",
-    "Note that if $\\Phi=0$ and $n=1$ the policy will resemble behavioral clonning.\n",
-    "On the oposite side if d $\\Phi \\rightarrow a_{max} - a_{min}$ and $n \\rightarrow \\infty$, then the algorithm approaches Q-learning, as the policy begins to greedily maximize the value function over the entire action space.\n",
-    "\n",
-    "\n",
-    "## Discrete BCQ: Short descritpion -> Simplifications"
+    "Note that if $\\Phi=0$ and $n=1$ the policy will resemble behavioral cloning.\n",
+    "On the opposite side if d $\\Phi \\rightarrow a_{max} - a_{min}$ and $n \\rightarrow \\infty$, then the algorithm approaches Q-learning, as the policy begins to greedily maximize the value function over the entire action space."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Pros**: As it learns how to generates new actions not include in the dataset \n",
+    "**Pros**: As it learns how to generate new actions not include in the dataset\n",
     "it is suitable for small datasets and for unbalanced sets where a few unrepresented actions\n",
     "could be important for the task to be solved. \n",
     "\n",
-    "**cons**: As BCQ generated action from a VAE, if the dataset used to trian it underrepresent some important actions it could be that the VAE is not able to generate meaningful actions around that state and so the discover of new or unconventional actions could be hard. This is one of the limitation of contrained policy approaches!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ToDo: Exercises where BCQ beats DQN!!!\n",
-    "\n",
-    "BCQ for realistic case!!! --> MINARI robotic hand manipulation maybe?"
+    "**cons**: As BCQ generated action from a VAE, if the dataset used to train it underrepresents some important actions it could be that the VAE is not able to generate meaningful actions around that state and so the discovery of new or unconventional actions could be hard. This is one of the limitation of constrained policy approaches!"
    ]
   },
   {
@@ -122,7 +110,7 @@
     "collapsed": true
    },
    "source": [
-    "CQL follows a pesimitic approach by considering a lower bound of the Q-value. In the paper they show that the solution of:\n",
+    "CQL follows a pessimistic approach by considering a lower bound of the Q-value. In the paper they show that the solution of:\n",
     "\n",
     "$\\hat{Q}^{k+1}_{\\text{CQL}} \\gets \\hbox{argmin}_Q \\left[ \\color{red} {\\alpha\\big(\\mathbb{E}_{s \\sim \\mathcal{D}, a \\sim \\mu}[Q(s,a)] - \\mathbb{E}_{s,a \\sim \\mathcal{D}}[Q(s,a)]\\big)} + \\frac{1}{2} \\mathbb{E}_{s,a \\sim \\mathcal{D}} \\Big[\\big(Q(s,a) - \\mathcal{B}^{\\pi}Q(s,a)\\big)^2\\Big] \\right].$\n",
     "\n",
@@ -132,9 +120,7 @@
     "\n",
     "CQL Focuses on **conservative value estimation** to provide lower bounds on the expected return of a policy. Aims to reduce overestimation bias and ensure that the policy remains within a safe region of the state-action space. Achieves safe exploration by constructing action sets that cover a broader range of state-action pairs. Well-suited for scenarios where safety is a top priority, as it **reduces the risk of catastrophic actions**.\n",
     "\n",
-    "Note that BCQ could be better to discover novel actions an maybe uses the collected data more efficiently but may not guarantee complete safety!.\n",
-    "\n",
-    "Link to excercise!!"
+    "Note that BCQ could be better to discover novel actions and to use the collected data more efficiently but may not guarantee complete safety!."
    ]
   },
   {
