--- a/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
+++ b/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:01:44.022187Z",
+     "end_time": "2023-11-23T12:01:46.308293Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -30,7 +35,6 @@
     "load_env_variables()\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "# ToDo: this should be load automatically\n",
     "register_grid_envs()"
    ]
   },
@@ -65,7 +69,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:01:46.309847Z",
+     "end_time": "2023-11-23T12:01:46.313497Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -95,7 +104,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:06:58.147908Z",
+     "end_time": "2023-11-23T12:06:58.152443Z"
+    }
+   },
    "outputs": [],
    "source": [
     "IDENTIFIER_COMBINED_DATASETS = \"_stiching_property_I\"\n",
@@ -122,13 +136,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:06:59.283981Z",
+     "end_time": "2023-11-23T12:07:03.419933Z"
+    }
+   },
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
     "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_dataset\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
@@ -178,13 +197,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Choose yuor policy"
+    "#### Choose your policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:07:06.507465Z",
+     "end_time": "2023-11-23T12:07:06.512902Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The model policy to be trained.\n",
@@ -211,10 +235,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:07:07.387436Z",
+     "end_time": "2023-11-23T12:07:22.389577Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 50\n",
+    "NUM_EPOCHS = 300\n",
     "BATCH_SIZE = 256\n",
     "UPDATE_PER_EPOCH = 100\n",
     "\n",
@@ -237,10 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy.pth\"\n",
+    "POLICY_FILE = \"policy_best_reward.pth\"\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
     "# load the weights\n",
@@ -248,12 +276,18 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:07:32.951772Z",
+     "end_time": "2023-11-23T12:07:32.966662Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
@@ -264,7 +298,10 @@
     "    num_frames=1000,\n",
     "    imitation_policy_sampling=False\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -272,7 +309,7 @@
    "source": [
     "**As we can see the BCQ algorithm is able to stitch two trajectories in order to create an optimal one.**\n",
     "\n",
-    "**Try to do the same with CQL. What do you observe?**"
+    "**Try to do the same with CQL. What do you observe? Try to increase the number of expert samples and run it again.**"
    ]
   },
   {
@@ -286,9 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0 - Add an obstacle around the target. The same as in notebook-161.\n",
+    "1 - Add an obstacle around the target. The same as in notebook-161.\n",
     "\n",
-    "1 - To modify BCQ parameters, please refer to **'offline_policy_config.policy_config'** and adjust the **'unlikely_action_threshold'**, which controls the distributional shift. This parameter ranges from 0 (conservative) to 1 (non-conservative). Experiment to find a value that ensures the agent remains within the desired distribution when obstacles are removed around the target\n",
+    "2 - To modify BCQ parameters, please refer to **'offline_policy_config.policy_config'** and adjust the **'unlikely_action_threshold'**, which controls the distributional shift. This parameter ranges from 0 (conservative) to 1 (non-conservative). Experiment to find a value that ensures the agent remains within the desired distribution when obstacles are removed around the target\n",
     "\n",
     "3 - Repeat everything for the CQL algorithm."
    ]
