--- a/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
+++ b/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:42.649169Z",
+     "end_time": "2023-11-23T12:44:44.900642Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
@@ -30,7 +35,6 @@
     "load_env_variables()\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "# ToDo: this should be load automatically\n",
     "register_grid_envs()"
    ]
   },
@@ -49,7 +53,7 @@
     "\n",
     "As mentioned earlier, regularization methods such as CQL are a suitable choice when prioritizing safety in your agent's behavior. However, if your focus is primarily on achieving an optimal solution with fewer constraints on safety, methods like BCQ may be more suitable.\n",
     "\n",
-    "In this exercise we will start from (0,0) and we will try to reach the target at (4,7) but the target is protected by a wall. We will collect data again from sub-optimal policies as shown below (section 1.2).  "
+    "In this exercise we will start from (0,0) and we will try to reach the target at (4,7) but the target is protected by a wall. We will collect data again from suboptimal policies as shown below (section 1.2)."
    ]
   },
   {
@@ -62,7 +66,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:44.903222Z",
+     "end_time": "2023-11-23T12:44:45.060150Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -93,7 +102,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:45.060664Z",
+     "end_time": "2023-11-23T12:44:45.062140Z"
+    }
+   },
    "outputs": [],
    "source": [
     "IDENTIFIER_COMBINED_DATASETS = \"_conservative_test\"\n",
@@ -121,13 +135,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:45.063223Z",
+     "end_time": "2023-11-23T12:44:45.812066Z"
+    }
+   },
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
     "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_dataset\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
@@ -177,17 +196,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Choose yuor policy"
+    "#### Choose your policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:52.720087Z",
+     "end_time": "2023-11-23T12:44:52.723555Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# The model policy to be trained.\n",
-    "POLICY_NAME = PolicyName.cql_discrete\n",
+    "POLICY_NAME = PolicyName.bcq_discrete\n",
     "\n",
     "\n",
     "NAME_EXPERT_DATA = config_combined_data.data_set_name\n",
@@ -211,13 +235,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:44:55.188845Z",
+     "end_time": "2023-11-23T12:45:41.574941Z"
+    }
    },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 200\n",
-    "BATCH_SIZE = 256\n",
-    "UPDATE_PER_EPOCH = 100\n",
+    "NUM_EPOCHS = 800\n",
+    "BATCH_SIZE = 512\n",
+    "UPDATE_PER_EPOCH = 500\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -245,10 +273,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-23T12:45:49.343627Z",
+     "end_time": "2023-11-23T12:45:49.386566Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy.pth\"\n",
+    "POLICY_FILE = \"policy_best_reward.pth\"\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
     "# load the weights\n",
