--- a/notebooks/nb_190_Final_Remarks.ipynb
+++ b/notebooks/nb_190_Final_Remarks.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "a. Robots require intelligent behavior in complex open-world environments demanding extensive training data due to robust visual perception requirements. (complex environment modeling and extensive data collection)\n",
     "\n",
-    "b. Robot grasping tasks, which involve expert data that cannot be be accurately simulated, providing an opportunity to assess our BCQ algorithm.\n",
+    "b. Robot grasping tasks, which involve expert data that cannot be accurately simulated, providing an opportunity to assess our BCQ algorithm.\n",
     "\n",
     "c. Robotic navigation tasks, where offline RL aids in crafting effective navigation policies using real-world data.\n",
     "\n",
@@ -28,8 +28,17 @@
     "\n",
     "... and many more. \n",
     "\n",
-    "However, if you have access to an environment with abundant data, online Reinforcement Learning (RL) can be a powerful choice due to its potential for exploration and real-time feedback. Nevertheless, the landscape of RL is evolving, and a data-centric approach is gaining prominence, exemplified by vast datasets like X-Embodiment. It's becoming evident that robots trained with diverse data across various scenarios tend to outperform those solely focused on specific tasks. Furthermore, leveraging multi-task trained agents for transfer learning can be a valuable strategy for addressing your specific task at hand."
+    "However, if you have access to an environment with abundant data, online Reinforcement Learning (RL) can be a powerful choice due to its potential for exploration and real-time feedback. Nevertheless, the landscape of RL is evolving, and a data-centric approach is gaining prominence, exemplified by vast datasets like X-Embodiment. It's becoming evident that robots trained with diverse data across various scenarios tend to outperform those solely focused on specific tasks. Furthermore, leveraging multitask trained agents for transfer learning can be a valuable strategy for addressing your specific task at hand."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
